# apm

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix
.github/workflows/: build.yaml  update-flake-lock.yaml
examples/: config.toml  styles.css
src/: cmd.rs  config.rs  fs.rs  gui.rs  main.rs
