[package]
name = "apm"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gtk-layer-shell = { version = "0.2.0", package = "gtk4-layer-shell" }
serde = { version = "1.0.195", features = ["derive"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
xdg = { version = "2.5.2", features = ["serde"] }
