[package]
name = "apm"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gtk-layer-shell = { version = "0.2.0", package = "gtk4-layer-shell" }
serde = { version = "1.0.195", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["path"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
xdg = { version = "2.5.2", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.79"
copy_to_output = "2.2.0"
glob = "0.3.1"
