[package]
name = "apm"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
iced = { version = "0.10.0", features = ["svg", "image", "web-colors", "palette", "advanced"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
xdg = { version = "2.5", features = ["serde"] }
